# roxlap-game-demo

./: .gitignore  CLAUDE.md  Cargo.toml  LICENSE  README.md  model.demiurg  model.kv6  shell.nix
src/: fonts.rs  input.rs  main.rs  math.rs  sprites.rs  test_utils.rs  world.rs
src/components/: aabb.rs  asteroid.rs  cannon.rs  canon.rs  crystal.rs  cube_marker.rs  energy.rs  headlight.rs  miner.rs  mod.rs  newton_body.rs  particle.rs  presence_position.rs  projectile.rs  sprite_id.rs  thruster.rs
src/generation/: asteroid.rs  chunks.rs  mod.rs
src/systems/: aabb.rs  autopilot.rs  camera.rs  cannon_cooldown.rs  canon_cooldown.rs  chunk_population.rs  crystal.rs  energy.rs  game_state.rs  lighting.rs  miner_input.rs  mod.rs  particle.rs  performance_info.rs  presence_position.rs  projectile.rs  render.rs  retrieval.rs  shooting.rs  sprite.rs  thruster.rs  ui.rs
