[package]
name = "roxlap-game-demo"
version = "0.1.0"
authors = ["Aminion <aminion@protonmail.com>"] 
edition = "2021"

[dependencies]
roxlap-core = { path = "../roxlap/crates/roxlap-core", version = "0.12" }
roxlap-formats = { path = "../roxlap/crates/roxlap-formats", version = "0.12" }
roxlap-cavegen = { path = "../roxlap/crates/roxlap-cavegen", version = "0.12" }
roxlap-gpu = { path = "../roxlap/crates/roxlap-gpu", version = "0.12", features = ["hud"] }
raw-window-handle = "0.6"
bytemuck = "1.25.0"
egui = "0.34"
glam = "0.33.1"
crossbeam = "0.8.4"
rand = "0.10.1"
log = "0.4.31"

[dependencies.sdl2]
version = "0.38"
default-features = false
features = ["raw-window-handle"]

[dev-dependencies]
proptest = "1"

[dependencies.legion]
version = "0.4.0"
default-features = false
features = ["codegen"]
