[package]
name = "roxlap-game-demo"
version = "0.1.0"
authors = ["Aminion <aminion@protonmail.com>"] 
edition = "2021"

[dependencies]
roxlap-core = "0.29.0"
roxlap-formats = "0.29.0"
roxlap-cavegen = "0.29.0"
roxlap-gpu = { version = "0.29.0", features = ["hud"] }
roxlap-scene = "0.29.0"
roxlap-render = { version = "0.29.0", features = ["hud"] }
raw-window-handle = "0.6.2"
egui = "0.34.3"
glam = "0.33.2"
crossbeam = "0.8.4"
rand = "0.10.2"
rayon = "1.12.0"
log = "0.4.33"

[dependencies.sdl2]
version = "0.38"
default-features = false
features = ["raw-window-handle"]

[dev-dependencies]
proptest = "1.11.0"

[dependencies.legion]
version = "0.4.0"
default-features = false
features = ["codegen"]
